# Driving-Assistance-App

./: .gitignore  LDmodule.py  Presentation.pptx  README.md  pyproject.toml  requirements.txt  trafficmodule.py
src/driving_assistance/: __init__.py  lane_detection.py  traffic_lights.py
tests/: test_lane_detection.py
