[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driving-assistance-app"
version = "1.0.0"
description = "Lane-marking and traffic-light detection from camera input using OpenCV."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Faizan Zafar" }]
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]

[project.scripts]
lane-detection = "driving_assistance.lane_detection:main"
traffic-lights = "driving_assistance.traffic_lights:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
